dart/vendor/sweph/lib/src/bindings.dart


  late final _swe_house_posPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_house_pos');
  late final _swe_house_pos = _swe_house_posPtr.asFunction<
      double Function(double, double, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  ffi.Pointer<ffi.Uint8> swe_house_name(
    int hsys,
  ) {
    return _swe_house_name(
      hsys,
    );
  }

  late final _swe_house_namePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint8> Function(ffi.Int32)>>(
          'swe_house_name');
  late final _swe_house_name =
      _swe_house_namePtr.asFunction<ffi.Pointer<ffi.Uint8> Function(int)>();

  /// exports from swecl.c
  int swe_gauquelin_sector(
    double t_ut,
    int ipl,
    ffi.Pointer<ffi.Uint8> starname,
    int iflag,
    int imeth,
    ffi.Pointer<ffi.Double> geopos,
    double atpress,
    double attemp,
    ffi.Pointer<ffi.Double> dgsect,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_gauquelin_sector(
      t_ut,
      ipl,
      starname,
      iflag,
      imeth,
      geopos,
      atpress,
      attemp,
      dgsect,
      serr,
    );
  }

  late final _swe_gauquelin_sectorPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Uint8>,
              int32,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_gauquelin_sector');
  late final _swe_gauquelin_sector = _swe_gauquelin_sectorPtr.asFunction<
      int Function(
          double,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<ffi.Double>,
          double,
          double,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  /// computes geographic location and attributes of solar
  /// eclipse at a given tjd
  int swe_sol_eclipse_where(
    double tjd,
    int ifl,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> attr,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_sol_eclipse_where(
      tjd,
      ifl,
      geopos,
      attr,
      serr,
    );
  }

  late final _swe_sol_eclipse_wherePtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_sol_eclipse_where');
  late final _swe_sol_eclipse_where = _swe_sol_eclipse_wherePtr.asFunction<
      int Function(double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  int swe_lun_occult_where(
    double tjd,
    int ipl,
    ffi.Pointer<ffi.Uint8> starname,
    int ifl,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> attr,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_lun_occult_where(
      tjd,
      ipl,
      starname,
      ifl,
      geopos,
      attr,
      serr,
    );
  }

  late final _swe_lun_occult_wherePtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Uint8>,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_lun_occult_where');
  late final _swe_lun_occult_where = _swe_lun_occult_wherePtr.asFunction<
      int Function(
          double,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  /// computes attributes of a solar eclipse for given tjd, geolon, geolat
  int swe_sol_eclipse_how(
    double tjd,
    int ifl,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> attr,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_sol_eclipse_how(
      tjd,
      ifl,
      geopos,
      attr,
      serr,
    );
  }

  late final _swe_sol_eclipse_howPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_sol_eclipse_how');
  late final _swe_sol_eclipse_how = _swe_sol_eclipse_howPtr.asFunction<
      int Function(double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  /// finds time of next local eclipse
  int swe_sol_eclipse_when_loc(
    double tjd_start,
    int ifl,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> tret,
    ffi.Pointer<ffi.Double> attr,
    int backward,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_sol_eclipse_when_loc(
      tjd_start,
      ifl,
      geopos,
      tret,
      attr,
      backward,
      serr,
    );
  }

  late final _swe_sol_eclipse_when_locPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              int32,
              ffi.Pointer<ffi.Uint8>)>>('swe_sol_eclipse_when_loc');
  late final _swe_sol_eclipse_when_loc =
      _swe_sol_eclipse_when_locPtr.asFunction<
          int Function(
              double,
              int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              int,
              ffi.Pointer<ffi.Uint8>)>();

  int swe_lun_occult_when_loc(
    double tjd_start,
    int ipl,
    ffi.Pointer<ffi.Uint8> starname,
    int ifl,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> tret,
    ffi.Pointer<ffi.Double> attr,
    int backward,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_lun_occult_when_loc(
      tjd_start,
      ipl,
      starname,
      ifl,
      geopos,
      tret,
      attr,
      backward,
      serr,
    );
  }

  late final _swe_lun_occult_when_locPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Uint8>,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              int32,
              ffi.Pointer<ffi.Uint8>)>>('swe_lun_occult_when_loc');
  late final _swe_lun_occult_when_loc = _swe_lun_occult_when_locPtr.asFunction<
      int Function(
          double,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          int,
          ffi.Pointer<ffi.Uint8>)>();

  /// finds time of next eclipse globally
  int swe_sol_eclipse_when_glob(
    double tjd_start,
    int ifl,
    int ifltype,
    ffi.Pointer<ffi.Double> tret,
    int backward,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_sol_eclipse_when_glob(
      tjd_start,
      ifl,
      ifltype,
      tret,
      backward,
      serr,
    );
  }

  late final _swe_sol_eclipse_when_globPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Double, int32, int32, ffi.Pointer<ffi.Double>,
              int32, ffi.Pointer<ffi.Uint8>)>>('swe_sol_eclipse_when_glob');
  late final _swe_sol_eclipse_when_glob =
      _swe_sol_eclipse_when_globPtr.asFunction<
          int Function(double, int, int, ffi.Pointer<ffi.Double>, int,
              ffi.Pointer<ffi.Uint8>)>();

  /// finds time of next occultation globally
  int swe_lun_occult_when_glob(
    double tjd_start,
    int ipl,
    ffi.Pointer<ffi.Uint8> starname,
    int ifl,
    int ifltype,
    ffi.Pointer<ffi.Double> tret,
    int backward,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_lun_occult_when_glob(
      tjd_start,
      ipl,
      starname,
      ifl,
      ifltype,
      tret,
      backward,
      serr,
    );
  }

  late final _swe_lun_occult_when_globPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Uint8>,
              int32,
              int32,
              ffi.Pointer<ffi.Double>,
              int32,
              ffi.Pointer<ffi.Uint8>)>>('swe_lun_occult_when_glob');
  late final _swe_lun_occult_when_glob =
      _swe_lun_occult_when_globPtr.asFunction<
          int Function(double, int, ffi.Pointer<ffi.Uint8>, int, int,
              ffi.Pointer<ffi.Double>, int, ffi.Pointer<ffi.Uint8>)>();

  /// computes attributes of a lunar eclipse for given tjd
  int swe_lun_eclipse_how(
    double tjd_ut,
    int ifl,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> attr,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_lun_eclipse_how(
      tjd_ut,
      ifl,
      geopos,
      attr,
      serr,
    );
  }

  late final _swe_lun_eclipse_howPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_lun_eclipse_how');
  late final _swe_lun_eclipse_how = _swe_lun_eclipse_howPtr.asFunction<
      int Function(double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  int swe_lun_eclipse_when(
    double tjd_start,
    int ifl,
    int ifltype,
    ffi.Pointer<ffi.Double> tret,
    int backward,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_lun_eclipse_when(
      tjd_start,
      ifl,
      ifltype,
      tret,
      backward,
      serr,
    );
  }

  late final _swe_lun_eclipse_whenPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Double, int32, int32, ffi.Pointer<ffi.Double>,
              int32, ffi.Pointer<ffi.Uint8>)>>('swe_lun_eclipse_when');
  late final _swe_lun_eclipse_when = _swe_lun_eclipse_whenPtr.asFunction<
      int Function(double, int, int, ffi.Pointer<ffi.Double>, int,
          ffi.Pointer<ffi.Uint8>)>();

  int swe_lun_eclipse_when_loc(
    double tjd_start,
    int ifl,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> tret,
    ffi.Pointer<ffi.Double> attr,
    int backward,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_lun_eclipse_when_loc(
      tjd_start,
      ifl,
      geopos,
      tret,
      attr,
      backward,
      serr,
    );
  }

  late final _swe_lun_eclipse_when_locPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              int32,
              ffi.Pointer<ffi.Uint8>)>>('swe_lun_eclipse_when_loc');
  late final _swe_lun_eclipse_when_loc =
      _swe_lun_eclipse_when_locPtr.asFunction<
          int Function(
              double,
              int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              int,
              ffi.Pointer<ffi.Uint8>)>();
